0.5.2
 - enh: allow the user to select a circle when uploading tasks that
   don't have any circle defined
 - fix: interface was not updated (e.g. list of uploads), because
   of wrong default parameter
 - fix: avoid upload jobs with invalid dataset IDs
0.5.1
 - build: fix Windows build pipeline
0.5.0
 - feat: support importing upload jobs from DCOR-Aid task files
 - feat: persistent upload jobs (DCORAid remembers all upload
   jobs and automatically attempts to run them on startup)
 - ref: ckanext-dcor_schemas 0.14.3 now handles activation
   attempts of datasets without resources correctly
 - ref: UploadJob now accepts dataset_id instead of dataset_dict,
   because that is cleaner
0.4.6
 - fix: do not anymore ignore APIErrors during upload
 - fix: support "date" type of resource supplements
 - fix: also check for resource metadata before declaring
   an upload successfull
0.4.5
 - ui: add stretch spacer item to resource schema supplements
0.4.4
 - setup: bump dclab from 0.32.4 to 0.33.3
0.4.3
 - ci: workaround for test failures (segmentation faults)
0.4.2
 - fix: visibility (private/public) of uploads was not set correctly
0.4.1
 - fix: ignore SubjectAltNameWarning for certificates in medical
   branding
0.4.0
 - feat: allow to renew and revoke API tokens (#12)
 - fix: selecting dcor-access token file in health-facility wizard
   section did not work.
 - fix: medical scenario should only support private data uploads
 - fix: aborting or restarting an upload job in the GUI did not work
 - fix: use circle name in upload dialog dropdown if title is empty
 - setup: setup.py test is deprecated
 - tests: added first GUI tests
 - docs: pathify logo text
0.3.0
 - BREAKING CHANGE: all methods and functions dealing with API calls
   now accept a CKANAPI instance instead of a server and an API key.
   This was necessary, because we have to support certificate pinning.
 - fix: actually use server certificate for "medical" user scenario
 - fix: support new CKAN API tokens